syntax = "proto3";

package listings;
option go_package = "./proto;listings";

message Content {
  enum Type {
    TYPE_UNKNOWN = 0;
    IMAGE = 1;
    VIDEO = 2;
  }

  int32 id = 1;
  string filename = 2;
  int32 file_id = 3;
  oneof source {
    int32 apartment_ref = 4;
    int32 building_ref = 5;
  }
  Type type = 6;
}

enum STATUS {
  STATUS_UNKNOWN = 0;
  SUCCESS = 1;
  FAIL = 2;
}

message ContentDataBlock {
  string filename = 1;
}

message GetContentRequest {
  int32 id = 1;
  string filename = 2;
  int32 file_id = 3;
}

message DeletePhotoRequest {
  int32 id = 1;
  string filename = 2;
  int32 file_id = 3;
}

message DeletePhotoResponse {
  STATUS status = 1;
}

